MAX_ATTR_SIZE: try reducing max attr size

--- a/src/Tsuku.Test/Tsuku.Test.csproj
+++ b/src/Tsuku.Test/Tsuku.Test.csproj
@@ -23,5 +23,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Tsuku\Tsuku.csproj" />
   </ItemGroup>
-
+  <PropertyGroup>
+    <CoverletOutputFormat>opencover,cobertura</CoverletOutputFormat>
+    <Include>[Tsuku]*,[Tsuku.*]*</Include>
+    <Exclude>[Tsuku.Tests*]*</Exclude>
+    <CollectCoverage>true</CollectCoverage>
+  </PropertyGroup>
 </Project>
