--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix: 
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-11.0]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
