--- a/codecov.yml
+++ b/codecov.yml
@@ -12,11 +12,7 @@ coverage:
         if_no_uploads: error
         set_pending: yes
         if_no_uploads: error
-    patch:
-      default:
-        if_no_uploads: error
-        target: 25
-        set_pending: yes
+    patch: off
 
 comment:
   layout: "header, diff, changes, suggestions, sunburst"
