--- a/src/Tsuku/Tsuku.csproj
+++ b/src/Tsuku/Tsuku.csproj
@@ -1,15 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.1;net5.0;net6.0</TargetFrameworks>
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Mono.Posix.NETStandard" Version="1.0.0" PrivateAssets="Compile" />
-    <PackageReference Include="Vanara.PInvoke.Kernel32" Version="3.3.3" PrivateAssets="Compile" />
+    <PackageReference Include="Mono.Posix" Version="7.1.0-final.1.21458.1" />
+    <PackageReference Include="Vanara.PInvoke.Kernel32" Version="3.3.15" PrivateAssets="Compile" />
   </ItemGroup>
   
   <PropertyGroup>
